--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-25 Tue 23:59]
+#+CAPTION: Clock summary at [2017-07-26 Wed 19:18]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *16:31* |       |      | 100.0 |
+| *Total time*                                                                | *16:47* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 16:31   |       |      | 100.0 |
-| Active                                                                      |         | 16:31 |      | 100.0 |
+| Stories                                                                     | 16:47   |       |      | 100.0 |
+| Active                                                                      |         | 16:47 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   1.9 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:18 |   7.9 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:34 |   9.3 |
 | COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.7 |
-| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  22.3 |
-| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   7.7 |
+| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  21.9 |
+| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   7.5 |
 | STARTED Add canonical archetype support to yarn                             |         |       | 0:47 |   4.7 |
-| STARTED Add meta-type support to yarn                                       |         |       | 9:03 |  54.8 |
+| STARTED Add meta-type support to yarn                                       |         |       | 9:03 |  53.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -78,6 +78,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-07-26 Wed 19:02]--[2017-07-26 Wed 19:18] =>  0:16
     CLOCK: [2017-07-23 Sun 15:32]--[2017-07-23 Sun 15:45] =>  0:13
     CLOCK: [2017-07-18 Tue 17:13]--[2017-07-18 Tue 17:47] =>  0:34
     CLOCK: [2017-07-18 Tue 05:40]--[2017-07-18 Tue 05:58] =>  0:18
@@ -287,15 +288,6 @@ namespace:
 : modeling::object
 
 And so forth. The namespace name probably needs a bit of thinking.
-
-*** Add full support for type_index                                   :story:
-
-At present we cannot create containers using =std::type_index= as a
-key because we do not have hashing, IO and serialisation support.
-
-Links:
-
-- [[http://stackoverflow.com/questions/36219532/serializing-stdtype-index][Serializing `std::type_index`]]
 
 *** Move enablement into yarn                                         :story:
 
