--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-27 Thu 07:32]
+#+CAPTION: Clock summary at [2017-07-28 Fri 10:33]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *19:17* |       |      | 100.0 |
+| *Total time*                                                                | *19:49* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 19:17   |       |      | 100.0 |
-| Active                                                                      |         | 19:17 |      | 100.0 |
+| Stories                                                                     | 19:49   |       |      | 100.0 |
+| Active                                                                      |         | 19:49 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   1.6 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 2:19 |  12.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 2:51 |  14.4 |
 | COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.6 |
-| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  19.1 |
-| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   6.6 |
+| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  18.6 |
+| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   6.4 |
 | STARTED Rename =meta_type= in JSON                                          |         |       | 0:19 |   1.6 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 0:47 |   4.1 |
-| STARTED Add meta-type support to yarn                                       |         |       | 9:34 |  49.6 |
-| STARTED Move external module processing into yarn                           |         |       | 0:55 |   4.8 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 0:47 |   4.0 |
+| STARTED Add meta-type support to yarn                                       |         |       | 9:34 |  48.3 |
+| STARTED Move external module processing into yarn                           |         |       | 0:55 |   4.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -80,6 +80,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-07-28 Fri 10:01]--[2017-07-28 Fri 10:33] =>  0:32
     CLOCK: [2017-07-27 Thu 06:47]--[2017-07-27 Thu 07:32] =>  0:45
     CLOCK: [2017-07-26 Wed 19:02]--[2017-07-26 Wed 19:18] =>  0:16
     CLOCK: [2017-07-23 Sun 15:32]--[2017-07-23 Sun 15:45] =>  0:13
@@ -306,6 +307,31 @@ Tasks:
   create the context/repository.
 - Refactor yarn.dia, splitting out the model from the repository and
   renaming repository to context.
+
+*** Add models for the executables                                    :story:
+
+At present the executables are all hand-crafted. However, as we want
+to move the options into each executable we need them to be in a
+model.
+
+Tasks:
+
+- create a model for each executable and add the options to the model;
+- create options in yarn and stop using knitting options;
+- add meta-data to generate an executable instead of a library in
+  CMake.
+- generate a main skeleton if one does not exist.
+- remove options project.
+
+*** Throw on unsupported stereotypes                                  :story:
+
+In some cases we may support a feature in one language but not on
+others like say ORM at present. If a user requests ORM in a C# model,
+we should throw.
+
+*** Remove reducer in yarn.dia                                        :story:
+
+Use =std::remove_if= instead.
 
 *** Add a property for the model modules as an annotation             :story:
 
