--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,23 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-28 Fri 10:33]
+#+CAPTION: Clock summary at [2017-07-28 Fri 12:06]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *19:49* |       |      | 100.0 |
+| *Total time*                                                                | *21:14* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 19:49   |       |      | 100.0 |
-| Active                                                                      |         | 19:49 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   1.6 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 2:51 |  14.4 |
-| COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.6 |
-| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  18.6 |
-| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   6.4 |
-| STARTED Rename =meta_type= in JSON                                          |         |       | 0:19 |   1.6 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 0:47 |   4.0 |
-| STARTED Add meta-type support to yarn                                       |         |       | 9:34 |  48.3 |
-| STARTED Move external module processing into yarn                           |         |       | 0:55 |   4.6 |
+| Stories                                                                     | 21:14   |       |      | 100.0 |
+| Active                                                                      |         | 21:14 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   1.5 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 2:51 |  13.4 |
+| COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.5 |
+| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  17.3 |
+| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   6.0 |
+| COMPLETED Refactor =yarn.dia=                                               |         |       | 1:25 |   6.7 |
+| STARTED Rename =meta_type= in JSON                                          |         |       | 0:19 |   1.5 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 0:47 |   3.7 |
+| STARTED Add meta-type support to yarn                                       |         |       | 9:34 |  45.1 |
+| STARTED Move external module processing into yarn                           |         |       | 0:55 |   4.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -143,6 +144,19 @@ logging would go in this main file.
 This is a bit of a more pressing issue because we now make use of name
 builders during initialisation in order to setup the formatter's
 meta-type.
+
+*** COMPLETED Refactor =yarn.dia=                                     :story:
+    CLOSED: [2017-07-28 Fri 12:05]
+    CLOCK: [2017-07-28 Fri 11:40]--[2017-07-28 Fri 12:05] =>  0:25
+    CLOCK: [2017-07-28 Fri 11:02]--[2017-07-28 Fri 11:39] =>  0:37
+    CLOCK: [2017-07-28 Fri 10:35]--[2017-07-28 Fri 10:58] =>  0:23
+
+There are a number of small issues with =yarn.dia=, which has
+bit-rotted somewhat; address them.
+
+Tasks:
+
+- use remove reducer; use =remove_if= instead.
 
 *** STARTED Rename =meta_type= in JSON                                :story:
     CLOCK: [2017-07-26 Wed 22:17]--[2017-07-26 Wed 22:36] =>  0:19
@@ -307,17 +321,6 @@ Tasks:
   create the context/repository.
 - Refactor yarn.dia, splitting out the model from the repository and
   renaming repository to context.
-
-*** STARTED Refactor =yarn.dia=                                       :story:
-    CLOCK: [2017-07-28 Fri 11:02]--[2017-07-28 Fri 11:39] =>  0:37
-    CLOCK: [2017-07-28 Fri 10:35]--[2017-07-28 Fri 10:58] =>  0:23
-
-There are a number of small issues with =yarn.dia=, which has
-bit-rotted somewhat; address them.
-
-Tasks:
-
-- use remove reducer; use =remove_if= instead.
 
 *** Add models for the executables                                    :story:
 
