--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-28 Fri 12:06]
+#+CAPTION: Clock summary at [2017-07-28 Fri 12:20]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *21:14* |       |      | 100.0 |
+| *Total time*                                                                | *21:28* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 21:14   |       |      | 100.0 |
-| Active                                                                      |         | 21:14 |      | 100.0 |
+| Stories                                                                     | 21:28   |       |      | 100.0 |
+| Active                                                                      |         | 21:28 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   1.5 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 2:51 |  13.4 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 2:51 |  13.3 |
 | COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.5 |
-| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  17.3 |
-| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   6.0 |
-| COMPLETED Refactor =yarn.dia=                                               |         |       | 1:25 |   6.7 |
+| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  17.2 |
+| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   5.9 |
+| COMPLETED Refactor =yarn.dia=                                               |         |       | 1:39 |   7.7 |
 | STARTED Rename =meta_type= in JSON                                          |         |       | 0:19 |   1.5 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 0:47 |   3.7 |
-| STARTED Add meta-type support to yarn                                       |         |       | 9:34 |  45.1 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 0:47 |   3.6 |
+| STARTED Add meta-type support to yarn                                       |         |       | 9:34 |  44.6 |
 | STARTED Move external module processing into yarn                           |         |       | 0:55 |   4.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -147,6 +147,7 @@ meta-type.
 
 *** COMPLETED Refactor =yarn.dia=                                     :story:
     CLOSED: [2017-07-28 Fri 12:05]
+    CLOCK: [2017-07-28 Fri 12:06]--[2017-07-28 Fri 12:20] =>  0:12
     CLOCK: [2017-07-28 Fri 11:40]--[2017-07-28 Fri 12:05] =>  0:25
     CLOCK: [2017-07-28 Fri 11:02]--[2017-07-28 Fri 11:39] =>  0:37
     CLOCK: [2017-07-28 Fri 10:35]--[2017-07-28 Fri 10:58] =>  0:23
